fixed layout issue for icons

--- a/cozycast-server/npm-website/src/public/css/styles.css
+++ b/cozycast-server/npm-website/src/public/css/styles.css
@@ -303,6 +303,7 @@ button{
 .buttonSmall {
     min-width: 2em;
     width: 2.25em;
+    padding: 0;
 }
 
 .btn-primary {
